<?xml version="1.0" encoding="utf-8"?>

<android.support.percent.PercentRelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".MainActivity"
    android:gravity="center"
    android:background="@color/colorBackground">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtResult"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:textSize="30sp"
        android:textAlignment="viewEnd"
        android:cursorVisible="false"
        android:focusable="false"
        android:inputType="number|text|numberDecimal"
        android:gravity="bottom|right"
        app:layout_widthPercent="100%"
        app:layout_heightPercent= "20%"
        android:typeface="serif"
        android:singleLine="true"
        android:background="@drawable/screen_state" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one"
        android:id="@+id/button1"
        android:textSize="23sp"
        android:onClick="buttonClick"
        android:layout_below="@+id/txtResult"
        app:layout_widthPercent="25%"
        app:layout_heightPercent= "20%"
        android:background="@color/colorBtnNumeric"
        android:typeface="serif"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two"
        android:id="@+id/button2"
        android:textSize="23sp"
        android:onClick="buttonClick"
        android:layout_toRightOf="@id/button1"
        android:layout_below="@+id/txtResult"
        app:layout_widthPercent="25%"
        app:layout_heightPercent= "20%"
        android:background="@color/colorBtnNumeric"
        android:typeface="serif"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three"
        android:id="@+id/button3"
        android:textSize="23sp"
        android:onClick="buttonClick"
        android:layout_toRightOf="@id/button2"
        android:layout_below="@+id/txtResult"
        app:layout_widthPercent="25%"
        app:layout_heightPercent= "20%"
        android:background="@color/colorBtnNumeric"
        android:typeface="serif"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sum"
        android:id="@+id/buttonSum"
        android:textSize="23sp"
        android:onClick="buttonClick"
        android:layout_toRightOf="@id/button3"
        android:layout_below="@+id/txtResult"
        app:layout_widthPercent="25%"
        app:layout_heightPercent= "20%"
        android:background="@color/colorBtnOp"
        android:typeface="serif"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/four"
        android:id="@+id/button4"
        android:textSize="23sp"
        android:onClick="buttonClick"
        android:layout_below="@+id/button1"
        app:layout_widthPercent="25%"
        app:layout_heightPercent= "20%"
        android:background="@color/colorBtnNumeric"
        android:typeface="serif"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/five"
        android:id="@+id/button5"
        android:textSize="23sp"
        android:onClick="buttonClick"
        android:layout_toRightOf="@id/button4"
        android:layout_below="@+id/button2"
        app:layout_widthPercent="25%"
        app:layout_heightPercent= "20%"
        android:background="@color/colorBtnNumeric"
        android:typeface="serif"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/six"
        android:id="@+id/button6"
        android:textSize="23sp"
        android:onClick="buttonClick"
        android:layout_toRightOf="@id/button5"
        android:layout_below="@+id/button3"
        app:layout_widthPercent="25%"
        app:layout_heightPercent= "20%"
        android:background="@color/colorBtnNumeric"
        android:typeface="serif"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub"
        android:id="@+id/buttonSub"
        android:textSize="23sp"
        android:onClick="buttonClick"
        android:layout_toRightOf="@id/button6"
        android:layout_below="@+id/buttonSum"
        app:layout_widthPercent="25%"
        app:layout_heightPercent= "20%"
        android:background="@color/colorBtnOp"
        android:typeface="serif"
        android:textStyle="bold" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seven"
        android:id="@+id/button7"
        android:textSize="23sp"
        android:onClick="buttonClick"
        android:layout_below="@+id/button4"
        app:layout_widthPercent="25%"
        app:layout_heightPercent= "20%"
        android:background="@color/colorBtnNumeric"
        android:typeface="serif"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eight"
        android:id="@+id/button8"
        android:textSize="23sp"
        android:onClick="buttonClick"
        android:layout_toRightOf="@id/button7"
        android:layout_below="@+id/button5"
        app:layout_widthPercent="25%"
        app:layout_heightPercent= "20%"
        android:background="@color/colorBtnNumeric"
        android:typeface="serif"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nine"
        android:id="@+id/button9"
        android:textSize="23sp"
        android:onClick="buttonClick"
        android:layout_toRightOf="@id/button8"
        android:layout_below="@+id/button6"
        app:layout_widthPercent="25%"
        app:layout_heightPercent= "20%"
        android:background="@color/colorBtnNumeric"
        android:typeface="serif"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mlt"
        android:id="@+id/buttonMlt"
        android:textSize="23sp"
        android:onClick="buttonClick"
        android:layout_toRightOf="@id/button9"
        android:layout_below="@+id/buttonSub"
        app:layout_widthPercent="25%"
        app:layout_heightPercent= "20%"
        android:background="@color/colorBtnOp"
        android:typeface="serif"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c"
        android:id="@+id/buttonC"
        android:textSize="23sp"
        android:onClick="buttonClick"
        android:layout_below="@+id/button7"
        app:layout_widthPercent="25%"
        app:layout_heightPercent= "20%"
        android:background="@color/colorBtnOp"
        android:typeface="serif"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:id="@+id/button0"
        android:textSize="23sp"
        android:onClick="buttonClick"
        android:layout_toRightOf="@id/buttonC"
        android:layout_below="@+id/button8"
        app:layout_widthPercent="25%"
        app:layout_heightPercent= "20%"
        android:background="@color/colorBtnNumeric"
        android:typeface="serif"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eq"
        android:id="@+id/buttonEq"
        android:textSize="23sp"
        android:onClick="buttonClick"
        android:layout_toRightOf="@id/button0"
        android:layout_below="@+id/button9"
        app:layout_widthPercent="25%"
        app:layout_heightPercent= "20%"
        android:background="@color/colorBtnOp"
        android:typeface="serif"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/div"
        android:id="@+id/buttonDiv"
        android:textSize="23sp"
        android:onClick="buttonClick"
        android:layout_toRightOf="@id/buttonEq"
        android:layout_below="@+id/buttonMlt"
        app:layout_widthPercent="25%"
        app:layout_heightPercent= "20%"
        android:background="@color/colorBtnOp"
        android:typeface="serif"
        android:textStyle="bold" />
</android.support.percent.PercentRelativeLayout>